syntax = "proto3";

option go_package = "./pb";

import "google/protobuf/any.proto";

package gserver;

// 路由转发相关proto

enum CmdRoute {
  CmdRoute_None         = 0; // 解决"The first enum value must be zero in proto3."的报错
  Cmd_RoutePlayerMessage = 3001;
  Cmd_GuildRoutePlayerMessageReq = 3003;
}

// 路由转发给玩家的消息
message RoutePlayerMessage {
  int64 toPlayerId = 1; // 玩家id
  int32 packetCommand = 2; // 消息号
  google.protobuf.Any packetData = 3; // 转发的消息
}

// 路由转发玩家的公会请求消息
message GuildRoutePlayerMessageReq {
  int64 fromPlayerId = 1; // 玩家id
  int64 fromGuildId = 2;  // 玩家公会id
  int32 fromServerId = 3; // 玩家当前所在服务器id
  int32 packetCommand = 4; // 消息号
  google.protobuf.Any packetData = 5; // 消息内容
}